--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <img src="https://i.imgur.com/RcVb73E.png"> -->
 
     <!--<button id="botonpruebas" type="button" onclick="pruebas()">PROBANDO MUYAYO</button>-->
-    <script src="ppt.js"></script>
+    <script src="scripts/ppt.js"></script>
     
 </body>
 </html>
