--- a/calculadora.html
+++ b/calculadora.html
@@ -42,10 +42,10 @@
     <!--RESULTADO-->
     <button class="output" id="output" type="button" onclick="">OUTPUT</button>
     
-    <script src="inputs.js"></script>
-    <script src="operaciones.js"></script>
-    <script src="del.js"></script>
-    <script src="ans.js"></script>
+    <script src="scripts/inputs.js"></script>
+    <script src="scripts/operaciones.js"></script>
+    <script src="scripts/del.js"></script>
+    <script src="scripts/ans.js"></script>
 
     <!--BOTONES DE APOYO PARA CREAR EL CODIGO-->
     
