--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
     </div>
     <div class="content">
         <h2>Bienvenido a mi página web</h2>
-        <a id="link" href="golftripspain.com/ppt">Jugar a piedras papel tijeras</a>
-        <a id="link" href="golftripspain.com/calculadora">Calculadora</a>
+        <a id="link" href="/ppt">Jugar a piedras papel tijeras</a>
+        <a id="link" href="/calculadora">Calculadora</a>
     </div>
     <div class="footer">
         <p>&copy; 2023 golftripspain.com</p>
