--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>golfgripspain.com</title>
-    <link rel="stylesheet" href="styles.css">
     <style>
+        #divfondo {
+            background-image: url("./images/Campo-3.jpg");
+            background-color: #cccccc;
+        }
+    
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -69,11 +73,14 @@
     </div>
     <div class="content">
         <h2>Bienvenido a mi página web</h2>
-        <a id="link" href="/ppt">Jugar a piedras papel tijeras</a>
-        <a id="link" href="/calculadora">Calculadora</a>
+        <a id="link" href="./PPT.html">Jugar a piedras papel tijeras</a>
+        <a id="link" href="./calculadora.html">Calculadora</a>
     </div>
     <div class="footer">
         <p>&copy; 2023 golftripspain.com</p>
+    </div>
+    <div style=" padding-left:500px">
+        <img src="./images/Campo-3.jpg">
     </div>
 </body>
 </html>
