--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
     <div class="content">
         <h2>Bienvenido a mi página web</h2>
-        <a id="link" href="./PPT.html">Jugar a piedras papel tijeras</a>
+        <a id="link" href="./ppt.html">Jugar a piedras papel tijeras</a>
         <a id="link" href="./calculadora.html">Calculadora</a>
     </div>
     <div class="footer">
