--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
     </div>
     <div class="content">
         <h2>Bienvenido a mi página web</h2>
-        <a id="link" href="./ppt.html">Jugar a piedras papel tijeras</a>
+        <a id="link" href="./PPT.html">Jugar a piedras papel tijeras</a>
         <a id="link" href="./calculadora.html">Calculadora</a>
     </div>
     <div class="footer">
         <p>&copy; 2023 golftripspain.com</p>
     </div>
-    <div style=" padding-left:500px">
-        <img src="./images/Campo-3.jpg">
+    <div style=" padding-left:15%;padding-right:15%">
+        <img src="./images/Campo-3.jpg" style="max-width:100%">
     </div>
 </body>
 </html>
