--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="content">
         <h2>Bienvenido a mi página web</h2>
         <a id="link" href="./ppt2.html">Jugar a piedras papel tijeras</a>
-        <a id="link" href="./calculadora2.html">Calculadora</a>
+        <a id="link" href="./calculadora.html">Calculadora</a>
     </div>
     <div class="footer">
         <p>&copy; 2023 golftripspain.com</p>
