--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
     </div>
     <div class="content">
         <h2>Bienvenido a mi página web</h2>
-        <a id="link" href="./ppt2.html">Jugar a piedras papel tijeras</a>
-        <a id="link" href="./calculadora3.html">Calculadora</a>
+        <a id="link" href="./PPT.html">Jugar a piedras papel tijeras</a>
+        <a id="link" href="./calculadora.html">Calculadora</a>
+        <a id="link" href="./fantasma.html">Fantasma</a>
     </div>
     <div class="footer">
         <p>&copy; 2023 golftripspain.com</p>
@@ -82,5 +83,6 @@
     <div style=" padding-left:15%;padding-right:15%">
         <img src="./images/Campo-3.jpg" style="max-width:100%">
     </div>
+    
 </body>
 </html>
